<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/itm_Home"
            android:icon="@drawable/ic_home"
            android:title="@string/Item1" />
        <item
            android:id="@+id/itm_profile"
            android:icon="@drawable/ic_profile"
            android:title="@string/ItemProfile" />
        <item
            android:id="@+id/itm_fav"
            android:icon="@drawable/ic_fav"
            android:title="@string/itemFav" />
        <item
            android:id="@+id/itm_his"
            android:icon="@drawable/ic_his"
            android:title="@string/item_his" />
        <item
            android:id="@+id/itm_Faq"
            android:icon="@drawable/ic_faq"
            android:title="@string/itmFaq" />
        <item
            android:id="@+id/itm_logOut"
            android:icon="@drawable/ic_log_out"
            android:title="@string/itmLog" />
    </group>
</menu>