<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/app_background_color"
    tools:context=".activity.OtpActivity">

    <TextView
        android:id="@+id/txt_otp_msg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40sp"
        android:text="Enter the received OTP below"
        android:textColor="@color/white_color"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/et_reset_otp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/txt_otp_msg"
        android:layout_marginStart="10dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="10dp"
        android:background="@color/white_color"
        android:drawableStart="@drawable/ic_key"
        android:hint="@string/otpStringEt"
        android:inputType="numberPassword"
        android:maxLines="1"
        android:padding="8dp"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/et_reset_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/et_reset_otp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="10dp"
        android:background="@color/white_color"
        android:drawableStart="@drawable/ic_password"
        android:hint="@string/passwordRegisterMsg"
        android:inputType="numberPassword"
        android:maxLines="1"
        android:padding="8dp"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/et_reset_conPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/et_reset_password"
        android:layout_marginStart="10dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="25dp"
        android:background="@color/white_color"
        android:drawableStart="@drawable/ic_password"
        android:hint="@string/confirmPasswordReg"
        android:inputType="numberPassword"
        android:maxLines="1"
        android:padding="8dp"
        android:textSize="20sp" />

    <Button
        android:id="@+id/btn_submit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/et_reset_conPassword"
        android:layout_margin="20dp"
        android:background="#c47c2b"
        android:padding="13dp"
        android:text="@string/submitBtn"
        android:textColor="@color/white_color"
        android:textSize="22sp"
        android:textStyle="bold" />


</RelativeLayout>